mainMenuStyle.css
/* ... */
input[type="text"] {
    position: relative;
    background: transparent;
    color: var(--grey2);
}

.gameSuggestions{
    display: none;
}

.gameSuggestions.show {
    display: block;
    position: absolute;
    background-color: var(--white2);
    padding-top: 20px;
    width: 362px;
    top: 20px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
}

.gameSuggestions__div {
    background-color: var(--white2);
    padding: 13px;
    font-size: 20px;
    color: #A6A6A6;
    cursor: pointer;
}

.gameSuggestions__div:first-of-type {
    border-top: 2px solid #999;
}

.gameSuggestions__div:last-of-type {
    overflow: hidden;
    border-radius: 0px 0px 20px 20px;
}

input::placeholder {
    color: var(--grey2);
}

.searchBarIcon {
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--white2);
    border-radius: 20px 0px 0px 20px;
    width: 56px;
    z-index: 2;
}

.searchBarIcon img {
    height: 15.998370170593262px;
    width: 16.000619888305664px;
}

.headerOptions__searchBarContainer input {
    height: 40px;
    width: 326px;
    background: var(--white2);
    border-radius: 0px 20px 20px 0px;
    border: none;
    outline: none;
    font-size: 16px;
    font-weight: 300;
    line-height: 22px;
    letter-spacing: 0px;
    padding-left: 5px;
    z-index: 2;
}

.headerOptions__logoutContainer {
    display: flex;
    align-items: baseline;
    margin-top: 44px;
    margin-left: auto;
    margin-right: 0px
}

.headerOptions__logoutContainer img {
    margin-left: 11px;
}

.headerOptions__logoutContainer a {
    color: var(--white);
    text-decoration: none;
    font-weight: normal;
    font-size: 14px;
    line-height: 19px;
}

.headerOptions__logoutContainer.show{
    position: absolute;
    z-index: 1;
}

.logoutIcon {
    display: flex;
    align-items: baseline;
}

.headerOptions__profileIconContainer {
    margin-top: 29.33px;
    padding-left: 32.32px;
    padding-right: 37.81px;
    margin-right: 0px
}

.headerOptions__profileIconContainer img {
    height: 45.33333206176758px;
    width: 43.870967864990234px;
    /* object-fit: cover; */
    border-radius: 50%;
}

.headerOptions__searchLens--mobile{
    display: none;
}

.headerLine {
    display: flex;
    align-items: center;
    justify-content: center;
}

.headerLine hr {
    width: 100%;
    margin-left: 40px;
    margin-right: 40px;
    border: 1px solid var(--white);
}

.header__searchBarContainer--mobile{
    display: none;
}

/* - - - - - - - - NAV - - - - - - - - */

.horizontalContainer{
    display: flex;
}

nav {
    width: 263px;
    height: 100%;
    color: var(--white);
    flex: none;
}

.nav__title{
    display: none;
}

.nav__hamburgerMenu--mobile{
    display: none;
}

ul{
    list-style-type: none;
}

nav ul {
    padding-top: 22px;
    padding-left: 39px;
}

li a {
    text-decoration: none;
    color: var(--white);
}

li a:hover {
    color: rgba(124, 210, 53, 1);
}

li img {
    margin-right: 13px;
    width: 16.25px;
    height: 13px;
}

.list__boldOption.marginTop {
    margin-top: 33px;
}

.list__boldOption {
    margin-top: 11px;
    font-weight: 800;
    font-size: 22px;
    line-height: 30px;
}

.list__boldOption.list__selected > a {
    color: var(--lightGreen);
}

.list_iconOption.marginTop {
    margin-top: 33px;
}

.list_iconOption {
    display: flex;
    margin-top: 11px;
    font-weight: normal;
    font-size: 22px;
    line-height: 30px;
}

.list__logOut{
    display: none;
}

.list__logOut.show{
    display: block;
}

/* - - - - - - - - CARDS CONTAINER - - - - - - - - */

.cardsSection{
    height: 89px;
    flex: auto;
}

.cardsSection__info{
    display: flex;
    justify-content: space-between;
    margin-right: 40px;
    width: 100%;
    margin-bottom: 30px;
    padding-right: 40px;
}

.titles__mainTitle{
    font-weight: 800;
    font-size: 55px;
    line-height: 75px;
    margin-top: 24px;
    color: var(--white);
}

.titles__subtitle{
    font-weight: normal;
    font-size: 18px;
    line-height: 25px;
    margin-top: -8px;
    color: var(--white);
}

.viewOptions{
    display: flex;
    margin-top: 51px;
}

.tripleColumnViewButton__svg{
    cursor: pointer;
    fill: #515151;
}

.tripleColumnViewButton__svg:hover{
    fill: #7D7D7D;
}

.singleColumnViewButton__svg{
    cursor: pointer;
    margin-left: 24px;
    fill: #303030;
}

.singleColumnViewButton__svg:hover{
    fill: #7D7D7D;
}

/* - - - - - - - - CARDS - - - - - - - - */

/* - - - threeColumnView - - -*/

.cardsContainer{
    display: flex;
    width: 100%;
    padding-right: 40px;
    position: relative;
}

.loaderContainer{
    position: absolute;
    width: 100%;
    height: 100%;
    background: var(--black);
    text-align: center;
    z-index: 1;
}

.cardsContainer__list{
    display: grid;
    width: 100%;
    margin-bottom: 25px;
    grid-template-rows: 314px 314px 314px;
    gap: 24px;
    grid-template-columns: repeat(auto-fill, minmax(363px, 1fr));
}

.card.listElement{
    background-color: var(--darkGrey);
    border-radius: 10px;
    overflow: hidden;
    min-width: 363px;
    cursor: pointer;
}

.card.listElement:hover {
    box-shadow: inset 0px 0px 20px #151515;
}

.card.listElement:active{
    box-shadow: inset 0px 0px 20px #000000;
}

.card.card__Image{
    height: 205px;
    display: flex;
}

.card.card__Image img{
    flex-shrink: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card.cardInfo{
    display: flex;
    height: 109px;
    padding-top: 10px;
    padding-left: 20px;
    padding-right: 20px;
}

.infoContainer--singleColumn{
    width: 186px;
}

.card.leftInfo__title{
    font-weight: 800;
    font-size: 23px;
    line-height: 31px;
    color: var(--white);
}

.card.leftInfo__releaseDate{
    display: flex;
    justify-content: space-between;
    margin-top: 3px;
    font-weight: 300;
    font-size: 12px;
    line-height: 16px;
    color: var(--grey2);
}
/* ... */

